--- a/ex3.html
+++ b/ex3.html
@@ -10,11 +10,12 @@
         img {
             border-radius: 50%;
         }
+        
     </style>
 </head>
 
 <body>
-    <table align="center"
+    <table align="center" class="table"
         style="position:relative;background-color:  rgb(34, 148, 148); height: 500px;border-radius: 20px;padding: 15px;">
         <tr style="position: relative;">
             <td style="padding-left: 70px;"><img src="ms-icon-310x310.png" alt=""></td>
@@ -34,7 +35,7 @@
             <td>
                 <h4>College name: <input type="text" name="" id=""></h4>
             </td>
-            <td style="position: relative;padding-bottom: 10px;">
+            <td style="position: relative;padding-bottom: 0px;">
                 <h4>Course:<select name="" id=""></h4>
                 <option value="">B.TECH</option>
                 <option value="">M.TECH</option>
