--- a/ex6.html
+++ b/ex6.html
@@ -28,7 +28,7 @@
             <br>
         <div class="row">
             <i class="fas fa-mail-bulk"></i>
-            <input type="text" size=40 class="form-control "id="row2"placeholder="Email">
+            <input type="text" size=40 class="form-control" placeholder="Email" id="row2">
             <span id="ro2"></span>
             </div>
         <br>
@@ -51,7 +51,7 @@
         <div class="form-check row">
             <input type="checkbox" name=""class="form-check-input " id="row5">
             <label class="form-check-label">I agree to the <a href=""> terms and Conditions</a></label>
-            <span id="ro5"></span>
+            <span id="row5"></span>
         </div>
         <br>
         <div>
