--- a/ex7.html
+++ b/ex7.html
@@ -111,7 +111,7 @@
             <div class="row">
                 <div class="col">
                     <div class="card border-success">
-                        <div class="card-header bg-success text-center">Free</div>
+                        <div class="card-header bg-success text-center text-white">Free</div>
                         <div class="cadr-body text-center ">
                             <p class="card-text"><b>$0</b>/mo <br>
                                 20 users included <br>
@@ -126,7 +126,7 @@
                 </div>
                 <div class="col">
                     <div class="card  border-success">
-                        <div class="card-header bg-success text-center">pro</div>
+                        <div class="card-header bg-success text-center text-white">pro</div>
                         <div class="cadr-body text-center ">
                             <p class="card-text"><b>$15</b>/mo <br>
                                 30 users included <br>
